@@ -58,7 +58,7 @@ ENTRY(__clone2)
 	 */
 	mov r15=SYS_ify (clone2)
 	.save rp, r0
-	break __BREAK_SYSCALL
+	break __IA64_BREAK_SYSCALL
 	.body
 	cmp.eq p6,p0=-1,r10
 	cmp.eq CHILD,PARENT=0,r8 /* Are we the child?   */
@@ -78,7 +78,7 @@ ENTRY(__clone2)
 	mov gp=loc0
 	mov r15=SYS_ify (exit)
 	.save rp, r0
-	break __BREAK_SYSCALL
+	break __IA64_BREAK_SYSCALL
 	ret			/* Not reached.		*/
 PSEUDO_END(__clone2)
 
